--- a/custom_fonts/roboto/font.css
+++ b/custom_fonts/roboto/font.css
@@ -8,8 +8,7 @@ h3,
 h4,
 h5,
 span,
-h6,
-p {
+h6 {
     font-family: 'Roboto Condensed', sans-serif;
 }
 .main_page_language_selector,
@@ -36,7 +35,7 @@ address {
 }
 .menu_container p,
 .menu_container .dish_price i {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
 	font-size: 17px;
     line-height: 23px;
 }
@@ -52,14 +51,11 @@ address {
 .main_page_language_selector {
     text-transform: uppercase;
 }
-.content_wrapper span {
-    font-family: 'Alegreya', serif;
+.content_wrapper p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
 /*.note-editor .note-editable {
     font-family: 'Alegreya', serif;
     font-size: 24px;
 }*/
-
-p {
-    font-size: 24px;
-}
